@@ -4,16 +4,16 @@
   <modelVersion>4.0.0</modelVersion>
   <!-- parent project configuration -->
   <parent>
-    <groupId>com.tjxjnoobie</groupId>
-    <artifactId>novus</artifactId>
-    <version>0</version>
+      <groupId>com.tjxjnoobie</groupId>
+      <artifactId>novus</artifactId>
+      <version>0</version>
     <relativePath>../pom.xml</relativePath> <!-- adjust as needed -->
   </parent>
 
   <artifactId>api</artifactId>
   <packaging>jar</packaging>
 
-  <name>API</name>
+  <name>api</name>
 
   <properties>
     <java.version>21</java.version>
@@ -27,6 +27,17 @@
         <filtering>true</filtering>
       </resource>
     </resources>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>21</source>
+                  <target>21</target>
+                  <compilerArgs>--enable-preview</compilerArgs>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 
   <dependencies>
